--- a/article3.html
+++ b/article3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigating ESG Reporting Standards | HansSites</title>
+    <title>ESG Reporting | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -28,6 +28,11 @@
                     <li><a href="index.html#clients">Clients</a></li>
                     <li><a href="index.html#kontak">Contact</a></li>
                 </ul>
+                <div class="search-container">
+                    <input type="text" id="search-input" class="search-input" placeholder="Search content..." autocomplete="off">
+                    <button class="search-btn" aria-label="Search"><i class="fas fa-search"></i></button>
+                    <div id="search-suggestions" class="suggestions-panel"></div>
+                </div>
             </nav>
         </div>
     </header>
@@ -35,51 +40,31 @@
     <main>
         <section class="detail-hero">
             <div class="container">
-                <p class="detail-hero-subtitle">Published on August 20, 2025</p>
-                <h1 class="detail-hero-title">Navigating ESG Reporting Standards</h1>
+                <p class="detail-hero-subtitle">Article</p>
+                <h1 class="detail-hero-title">The Rise of ESG Reporting</h1>
             </div>
         </section>
 
         <section class="page-content">
-            <div class="container">
-                <div class="detail-main-content">
-                    <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1599252513997-757ac7a73188?q=80&w=1974&auto=format&fit=crop" alt="ESG and sustainability concept">
-                    </div>
-                    <div class="detail-text-column">
-                        <h2>A Guide for Modern Accountants</h2>
-                        <p>
-                           Environmental, Social, and Governance (ESG) reporting has moved from a niche interest to a mainstream requirement for businesses worldwide. Investors, regulators, and consumers are demanding greater transparency on corporate sustainability and ethical practices. This places the accountant at the center of a new and complex reporting landscape.
-                        </p>
-                        <p>
-                            Accountants are now tasked with collecting, measuring, and assuring a wide range of non-financial data, from carbon emissions to diversity metrics. This requires developing new skill sets and frameworks to ensure that ESG disclosures are as reliable and accurate as traditional financial statements.
-                        </p>
-                    </div>
-                </div>
+            <div class="container" style="max-width: 800px;">
+                <a href="articles.html" class="view-more-btn" style="margin-bottom: 40px; display: inline-block;">&larr; Back to Articles</a>
+                <p class="article-meta" style="text-align: left; margin-bottom: 20px;">August 28, 2025 · 6 min read</p>
+                <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=1932&auto=format&fit=crop" alt="ESG Reporting" style="width: 100%; border-radius: 10px; margin-bottom: 30px;">
+                
+                <h2>Beyond the Bottom Line</h2>
+                <p>For generations, the success of a company was measured almost exclusively by its financial performance. Today, that view is rapidly expanding. Investors, consumers, and regulators are increasingly demanding that companies report on their Environmental, Social, and Governance (ESG) performance. This marks a new frontier for financial reporting, and accountants are at the heart of this transformation.</p>
 
-                <div class="competencies-section" style="background-color: transparent; padding-top: 0;">
-                    <h2 class="subsection-title">Key Challenges and Opportunities</h2>
-                    <div class="competency-grid">
-                        <div class="competency-card">
-                            <i class="fas fa-database"></i>
-                            <h3>Data Integrity</h3>
-                            <p>Ensuring the accuracy and completeness of non-financial data from various sources across the organization.</p>
-                        </div>
-                        <div class="competency-card">
-                            <i class="fas fa-globe"></i>
-                            <h3>Standardization</h3>
-                            <p>Navigating the complex and evolving landscape of different ESG reporting frameworks and standards.</p>
-                        </div>
-                        <div class="competency-card">
-                            <i class="fas fa-check-circle"></i>
-                            <h3>Assurance and Verification</h3>
-                            <p>Providing independent assurance over ESG reports to build trust and credibility with stakeholders.</p>
-                        </div>
-                    </div>
-                </div>
-                 <div class="cta-section">
-                    <a href="articles.html" class="view-more-btn">← Back to All Articles</a>
-                </div>
+                <h2>What is ESG?</h2>
+                <p>ESG reporting provides a holistic view of a company's impact and sustainability. It covers a wide range of non-financial metrics:</p>
+                <ul>
+                    <li><strong>Environmental:</strong> This includes a company's carbon footprint, energy consumption, water usage, waste management, and impact on biodiversity.</li>
+                    <li><strong>Social:</strong> This pertains to how a company manages relationships with its employees, suppliers, customers, and the communities where it operates. It covers labor practices, diversity and inclusion, data privacy, and customer satisfaction.</li>
+                    <li><strong>Governance:</strong> This deals with a company's leadership, executive pay, audits, internal controls, and shareholder rights.</li>
+                </ul>
+
+                <h2>The Accountant's Crucial Role</h2>
+                <p>While ESG metrics are non-financial, the skills of an accountant are perfectly suited to manage them. Accountants bring expertise in data collection, verification, assurance, and standardized reporting. The profession is playing a vital role in developing frameworks and standards for ESG reporting to ensure that the information is accurate, reliable, and comparable across companies. Just as accountants provide assurance on financial statements, they are now being called upon to provide assurance on ESG data, adding a new layer of trust and credibility to sustainability claims.</p>
+
             </div>
         </section>
     </main>
@@ -89,6 +74,7 @@
             <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
+
