--- a/clients.html
+++ b/clients.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Clients | HansSites</title>
+    <title>Our Clients | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -28,6 +28,11 @@
                     <li><a href="index.html#clients">Clients</a></li>
                     <li><a href="index.html#kontak">Contact</a></li>
                 </ul>
+                <div class="search-container">
+                    <input type="text" id="search-input" class="search-input" placeholder="Search content..." autocomplete="off">
+                    <button class="search-btn" aria-label="Search"><i class="fas fa-search"></i></button>
+                    <div id="search-suggestions" class="suggestions-panel"></div>
+                </div>
             </nav>
         </div>
     </header>
@@ -35,62 +40,25 @@
     <main>
         <section class="detail-hero">
             <div class="container">
-                <p class="detail-hero-subtitle">My Partners in Success</p>
-                <h1 class="detail-hero-title">Client Portfolio</h1>
+                <p class="detail-hero-subtitle">Our Partners</p>
+                <h1 class="detail-hero-title">Trusted By</h1>
             </div>
         </section>
 
         <section class="page-content">
             <div class="container">
-                <div class="client-grid">
-                    <!-- Client 1 -->
-                    <div class="client-logo">
-                        <img src="client-logo-1.png" alt="Client Logo 1">
-                    </div>
-                    <!-- Client 2 -->
-                    <div class="client-logo">
-                        <img src="client-logo-2.png" alt="Client Logo 2">
-                    </div>
-                    <!-- Client 3 -->
-                    <div class="client-logo">
-                        <img src="client-logo-3.png" alt="Client Logo 3">
-                    </div>
-                    <!-- Client 4 -->
-                    <div class="client-logo">
-                        <img src="client-logo-4.png" alt="Client Logo 4">
-                    </div>
-                     <!-- Client 5 -->
-                    <div class="client-logo">
-                        <img src="https://placehold.co/150x150/e9ecef/6c757d?text=Client+E" alt="Client Logo 5">
-                    </div>
-                     <!-- Client 6 -->
-                    <div class="client-logo">
-                        <img src="https://placehold.co/150x150/e9ecef/6c757d?text=Client+F" alt="Client Logo 6">
-                    </div>
-                     <!-- Client 7 -->
-                    <div class="client-logo">
-                        <img src="https://placehold.co/150x150/e9ecef/6c757d?text=Client+G" alt="Client Logo 7">
-                    </div>
-                     <!-- Client 8 -->
-                    <div class="client-logo">
-                        <img src="https://placehold.co/150x150/e9ecef/6c757d?text=Client+H" alt="Client Logo 8">
-                    </div>
+                <p class="subsection-description">We have had the privilege of providing accounting and financial consulting services to a diverse range of clients, from startups to established enterprises. Our commitment is to provide tailored solutions that drive financial health and sustainable growth.</p>
+                
+                <div class="client-grid" style="padding-top: 40px;">
+                    <div class="client-logo"><img src="client-logo-1.png" alt="Client Logo 1"></div>
+                    <div class="client-logo"><img src="client-logo-2.png" alt="Client Logo 2"></div>
+                    <div class="client-logo"><img src="client-logo-3.png" alt="Client Logo 3"></div>
+                    <div class="client-logo"><img src="client-logo-4.png" alt="Client Logo 4"></div>
+                    <div class="client-logo"><img src="client-logo-5.png" alt="Client Logo 5"></div>
+                    <div class="client-logo"><img src="client-logo-6.png" alt="Client Logo 6"></div>
+                    <div class="client-logo"><img src="client-logo-7.png" alt="Client Logo 7"></div>
+                    <div class="client-logo"><img src="client-logo-8.png" alt="Client Logo 8"></div>
                 </div>
-
-                <div class="testimonials-section">
-                    <h2 class="subsection-title">What They Say</h2>
-                    <!-- Testimonial 1 -->
-                    <div class="testimonial-card">
-                        <p>"Hans transformed our financial processes. His attention to detail and strategic insights have been invaluable to our growth."</p>
-                        <h4>- CEO, Tech Innovators Inc.</h4>
-                    </div>
-                    <!-- Testimonial 2 -->
-                    <div class="testimonial-card">
-                        <p>"The most reliable and professional accountant we've ever worked with. The audit process was seamless and incredibly thorough."</p>
-                        <h4>- CFO, Manufacturing Co.</h4>
-                    </div>
-                </div>
-
             </div>
         </section>
     </main>
@@ -100,6 +68,7 @@
             <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
+
