--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HansSites | Personal Profile</title>
+
+    <!-- ▼▼▼ META TAGS FOR SOCIAL MEDIA SHARE PREVIEW ▼▼▼ -->
+    <meta name="description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-website-url.com/"> <!-- Ganti dengan URL website Anda nanti -->
+    <meta property="og:title" content="HansSites | Personal Profile">
+    <meta property="og:description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
+    <meta property="og:image" content="https://your-website-url.com/hanssites-preview.jpg"> <!-- Ganti dengan URL gambar Anda -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://your-website-url.com/"> <!-- Ganti dengan URL website Anda nanti -->
+    <meta property="twitter:title" content="HansSites | Personal Profile">
+    <meta property="twitter:description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
+    <meta property="twitter:image" content="https://your-website-url.com/hanssites-preview.jpg"> <!-- Ganti dengan URL gambar Anda -->
+    <!-- ▲▲▲ END OF META TAGS ▲▲▲ -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
