--- a/project2.html
+++ b/project2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Details | Web Design</title>
+    <title>Web Design Project | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -28,6 +28,11 @@
                     <li><a href="index.html#clients">Clients</a></li>
                     <li><a href="index.html#kontak">Contact</a></li>
                 </ul>
+                <div class="search-container">
+                    <input type="text" id="search-input" class="search-input" placeholder="Search content..." autocomplete="off">
+                    <button class="search-btn" aria-label="Search"><i class="fas fa-search"></i></button>
+                    <div id="search-suggestions" class="suggestions-panel"></div>
+                </div>
             </nav>
         </div>
     </header>
@@ -36,56 +41,51 @@
         <section class="detail-hero">
             <div class="container">
                 <p class="detail-hero-subtitle">Case Study</p>
-                <h1 class="detail-hero-title">Dynamic Web Design Project</h1>
+                <h1 class="detail-hero-title">Web Design Showcase</h1>
             </div>
         </section>
 
         <section class="page-content">
             <div class="container">
+                <a href="projects.html" class="view-more-btn" style="margin-bottom: 40px; display: inline-block;">&larr; Back to All Projects</a>
+                
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1541462608143-67571c6738dd?q=80&w=2070&auto=format&fit=crop" alt="Modern web design on a laptop screen">
+                        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?q=80&w=2070&auto=format&fit=crop" alt="Modern web design layout on a laptop">
                     </div>
                     <div class="detail-text-column">
                         <h2>Project Overview</h2>
-                        <p>
-                            This project focused on designing and developing a responsive, user-centric website for a creative agency. The main objective was to create a visually stunning and highly interactive digital presence that effectively showcases the agency's portfolio and values.
-                        </p>
-                        <p>
-                            Built with modern technologies like React for the front-end, the site features fluid animations, a clean user interface (UI), and an intuitive user experience (UX). The design prioritizes mobile-first principles to ensure seamless performance across all devices.
-                        </p>
+                        <p>This project involved the complete redesign of a corporate website for a financial services firm. The previous site was outdated and not mobile-friendly. The goal was to create a modern, responsive, and professional online presence that would build trust and effectively communicate the firm's value proposition.</p>
+                        <p>The project utilized modern web technologies like React for a dynamic user interface and Node.js for backend functionalities.</p>
                     </div>
                 </div>
 
-                <div class="competencies-section" style="background-color: transparent; padding-top: 0;">
-                    <h2 class="subsection-title">Key Features & Technologies</h2>
+                <div class="competencies-section" style="background-color: transparent; padding: 40px 0;">
+                    <h3 class="subsection-title">Key Features</h3>
                     <div class="competency-grid">
                         <div class="competency-card">
-                            <i class="fas fa-palette"></i>
-                            <h3>UI/UX Principles</h3>
-                            <p>Applied core design principles to create an aesthetically pleasing and easy-to-navigate interface that enhances user engagement.</p>
+                            <i class="fas fa-drafting-compass"></i>
+                            <h3>UI/UX Overhaul</h3>
+                            <p>Conducted user research to develop a clean, intuitive, and user-centric design.</p>
                         </div>
                         <div class="competency-card">
                             <i class="fas fa-mobile-alt"></i>
                             <h3>Responsive Design</h3>
-                            <p>Ensured the layout adapts perfectly to various screen sizes, from mobile phones to widescreen desktops, for a consistent experience.</p>
+                            <p>Ensured a seamless experience across all devices, from desktops to smartphones.</p>
                         </div>
                         <div class="competency-card">
                             <i class="fab fa-react"></i>
-                            <h3>Interactive Elements</h3>
-                            <p>Developed dynamic components using React to create an engaging user experience with smooth transitions and interactive features.</p>
+                            <h3>Interactive Components</h3>
+                            <p>Built with React to create dynamic charts and interactive elements for user engagement.</p>
                         </div>
-                        <div class="competency-card">
+                         <div class="competency-card">
                             <i class="fas fa-tachometer-alt"></i>
                             <h3>Performance Optimization</h3>
-                            <p>Optimized assets and code to ensure fast load times and a smooth, responsive performance for all visitors.</p>
+                            <p>Focused on fast load times and smooth performance to enhance user experience.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="cta-section" style="padding-bottom: 0;">
-                    <a href="projects.html" class="view-more-btn" style="border-width: 2px;">← Back to All Projects</a>
-                </div>
             </div>
         </section>
     </main>
@@ -95,7 +95,7 @@
             <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
 
